@@ -1,5 +1,7 @@
 package hu.bme.aut.classifiedadvertisementsite.userservice.security;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import hu.bme.aut.classifiedadvertisementsite.userservice.model.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -11,19 +13,38 @@ import java.util.stream.Collectors;
 public class UserDetailsImpl implements UserDetails {
 
     private Integer id;
+
     private String username;
 
     private String email;
+
+    @JsonIgnore
+    private String password;
+
     private Collection<? extends GrantedAuthority> authorities;
 
-    public UserDetailsImpl(Integer id, String username, String email, List<String> roles) {
-        List<GrantedAuthority> authorities =
-                roles.stream().map(role -> new SimpleGrantedAuthority(role)).collect(Collectors.toList());
+    public UserDetailsImpl(Integer id, String username, String email, String password, List<String> roles) {
+        List<SimpleGrantedAuthority> authorities =
+                roles.stream().map(role -> new SimpleGrantedAuthority(role)).toList();
 
         this.id = id;
         this.username = username;
         this.email = email;
+        this.password = password;
         this.authorities = authorities;
+    }
+
+    public static UserDetailsImpl build(User user) {
+        List<String> authorities = user.getRoles().stream()
+                .map(role -> role.getName().name())
+                .collect(Collectors.toList());
+
+        return new UserDetailsImpl(
+                user.getId(),
+                user.getUsername(),
+                user.getEmail(),
+                user.getPassword(),
+                authorities);
     }
 
     public Integer getId() {
@@ -41,7 +62,7 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public String getPassword() {
-        return null;
+        return password;
     }
 
     @Override
@@ -51,21 +72,21 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public boolean isAccountNonExpired() {
-        return false;
+        return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return false;
+        return true;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return false;
+        return true;
     }
 
     @Override
     public boolean isEnabled() {
-        return false;
+        return true;
     }
 }
